// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  backgroundColor="white"
  borderColor="black"
  borderWidth="none"
  className=""
  color="black"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-button-circle buttonCircle normal"
  >
    <div
      className="buttonCircleContainer"
    >
      <Button
        backgroundColor="white"
        borderColor="black"
        borderWidth="none"
        className="normalBorder buttonCircleIcon"
        color="black"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        iconName="bomb"
        iconStyle="normalBox"
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        visible={true}
      >
        <div
          className="ui-button button ripple normal normalBorder buttonCircleIcon"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
              "color": "black",
            }
          }
        >
          <Icon
            backgroundColor="inherit"
            borderColor="inherit"
            borderWidth="none"
            className="normalBox icon"
            color="inherit"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            iconName="bomb"
            id=""
            imageFile=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            visible={true}
          >
            <i
              className="ui-icon icon none fa fa-fw false fa-bomb normal normalBox icon"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
            />
          </Icon>
        </div>
      </Button>
    </div>
  </div>
</ButtonCircle>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<div
  className="ui-button-circle buttonCircle normal test-class"
>
  <div
    className="buttonCircleContainer"
  >
    <Button
      backgroundColor="white"
      borderColor="black"
      borderWidth="none"
      className="normalBorder buttonCircleIcon"
      color="black"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      iconStyle="normalBox"
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    />
  </div>
</div>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  backgroundColor="white"
  borderColor="black"
  borderWidth="none"
  className=""
  color="black"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-button-circle buttonCircle normal disabled nohover"
  >
    <div
      className="buttonCircleContainer"
    >
      <Button
        backgroundColor="white"
        borderColor="black"
        borderWidth="none"
        className="normalBorder buttonCircleIcon"
        color="black"
        contentEditable={false}
        direction="right"
        disabled={true}
        focus={false}
        iconName="bomb"
        iconStyle="normalBox"
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        visible={true}
      >
        <div
          className="ui-button button normal normalBorder buttonCircleIcon disabled nohover"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
              "color": "black",
            }
          }
        >
          <Icon
            backgroundColor="inherit"
            borderColor="inherit"
            borderWidth="none"
            className="normalBox icon"
            color="inherit"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            iconName="bomb"
            id=""
            imageFile=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            visible={true}
          >
            <i
              className="ui-icon icon none fa fa-fw false fa-bomb normal normalBox icon"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
            />
          </Icon>
        </div>
      </Button>
    </div>
  </div>
</ButtonCircle>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  backgroundColor="white"
  borderColor="black"
  borderWidth="none"
  className=""
  color="black"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={false}
>
  <div
    className="ui-button-circle buttonCircle normal invisible"
  >
    <div
      className="buttonCircleContainer"
    >
      <Button
        backgroundColor="white"
        borderColor="black"
        borderWidth="none"
        className="normalBorder buttonCircleIcon"
        color="black"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        iconName="bomb"
        iconStyle="normalBox"
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        visible={false}
      >
        <div
          className="ui-button button ripple normal normalBorder buttonCircleIcon invisible"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "white",
              "borderColor": "black",
              "color": "black",
            }
          }
        >
          <Icon
            backgroundColor="inherit"
            borderColor="inherit"
            borderWidth="none"
            className="normalBox icon"
            color="inherit"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            iconName="bomb"
            id=""
            imageFile=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={Object {}}
            visible={true}
          >
            <i
              className="ui-icon icon none fa fa-fw false fa-bomb normal normalBox icon"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
            />
          </Icon>
        </div>
      </Button>
    </div>
  </div>
</ButtonCircle>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "backgroundColor": "white",
  "borderColor": "black",
  "borderWidth": "none",
  "className": "",
  "color": "black",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
}
`;
